back to fix chrome overflow bug (leafly)

--- a/assets/sass/3-modules/_store-menu.sass
+++ b/assets/sass/3-modules/_store-menu.sass
@@ -30,7 +30,7 @@
 				margin-bottom: 40px
 	&__leafly-container
 		overflow: scroll
-		-webkit-overflow-scrolling: touch
+		//-webkit-overflow-scrolling: touch
 		width: 87.952vw
 		height: 80vh
 		border: 3px solid $primary-color
