--- a/assets/sass/4-states/_menu-open.sass
+++ b/assets/sass/4-states/_menu-open.sass
@@ -1,8 +1,6 @@
 @import '../config'
 
 .menu-open .menu
-	overflow: hidden
-	-webkit-overflow-scrolling: touch
 	transform: translateX(100%)
 	transition: transform 300ms ease-in
 
